--- a/templates/edit_ingredient.html
+++ b/templates/edit_ingredient.html
@@ -1,16 +1,23 @@
 {% extends 'base.html' %} {% block content %}
 <div class="edit-add-ingredient-bg page-bg"></div>
+
+<!-- Adds a pop up box with instructions when user-photo-instructions-btn is hovered -->
+
 <div class="user-photo-instructions">
     <h3 class="photo-instructions-header">Use a personalised photo!</h3>
     <p class="photo-instructions-para">To use a photo of your choice please copy and paste the http address of your photo in the photo image address box.</p> 
     <p class="photo-instructions-para">To get the http address, simply find the photo you wish to use on the internet, right click it, and copy the image address / location.</p> 
     <p class="photo-instructions-para">And voila!  As if by magic, it will appear when you update!</p> 
 </div>
+
 <section class="add-edit-ingredient-section">
     <div class="container">
         <h1 class="section-title">Edit an Ingredient</h1>
         <p>Please update the details of this ingredient if needed...</p>
         <form action="{{ url_for('update_ingredient', ingredient_id=ingredient._id) }}" method="POST">
+            
+            <!--Form will be prepopulated with any existing details...-->
+            
             {% if ingredient.ingredient_image_url %}
             <img class="ingredient-img" src="{{ ingredient.ingredient_image_url }}" alt="User provided picture of specified ingredient">
             {% else %}
