--- a/static/css/components/pages.scss
+++ b/static/css/components/pages.scss
@@ -577,15 +577,16 @@
 }
 
 .stats-section {
-    background-color: $flame-orange;
+    background-image: url(../images/rawpixel-600789-wall.jpg);
     color: $white;
     text-align: center;
     padding: 14px 20px 30px;
+    background-position: bottom;
+    background-size: contain;
     
     h2 {
-        @extend %text-shadow;
         margin-bottom: 22px;
-            font-size: 42px;
+            font-size: 33px;
     }
 }
 
@@ -605,6 +606,7 @@
     color: $black;
     line-height: 24px;
     vertical-align: top;
+        min-width: 102px;
 }
 
 // Sign-up / Sign-in -----------------------------------------------------------
