--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -84,9 +84,6 @@ header {
   justify-content: center;
   align-items: center; }
 
-.stats-section h2 {
-  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15); }
-
 /*----------------- Main colors*/
 /* --- Widths */
 .hide-me-btn {
@@ -871,13 +868,15 @@ footer {
       font-size: 92px; } }
 
 .stats-section {
-  background-color: #f99806;
+  background-image: url(../images/rawpixel-600789-wall.jpg);
   color: #fff;
   text-align: center;
-  padding: 14px 20px 30px; }
+  padding: 14px 20px 30px;
+  background-position: bottom;
+  background-size: contain; }
   .stats-section h2 {
     margin-bottom: 22px;
-    font-size: 42px; }
+    font-size: 33px; }
 
 .stat-block {
   display: inline-block;
@@ -893,7 +892,8 @@ footer {
   font-size: 1.2em;
   color: #000;
   line-height: 24px;
-  vertical-align: top; }
+  vertical-align: top;
+  min-width: 102px; }
 
 .sign-up-section,
 .log-in-section {
