--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
 <section class="stats-section">
     <div class="container">
         <div class="row">
-            <h2 class="section-title">On this site...</h2> 
+            <h2 class="section-title">Smash though the food wall with loads of recipes!<br>On this site...</h2> 
         </div>
         <div class="stats row">
             {% for stat in stats %}
