README file updated and minor spelling changes made to some templates

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -21,7 +21,7 @@
                     <div class="column cusine-selection-box">
                         <li>
                             <select id="cusine" name="cusine" size="5" required>
-                                <option value="" disabled>Choose Cusine Type</option>
+                                <option value="" disabled>Choose Cuisine Type</option>
                                 {% for cusine in cusines %}
                                 <option value="{{ cusine }}">{{ cusine }}</option>
                                 {% endfor %}
