--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -27,7 +27,7 @@
                         {% endif %}
                     </div>
                     <div class="data2">
-                        <h2>Cusine Category</h2>
+                        <h2>Cuisine Category</h2>
                         <p>{{ this_recipe.cusine }}</p>
                     </div>
                     <div class="data2">
